@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Win32.pm - c:/Perl/site/lib/Module/Install/Win32.pm"
+#line 1 "inc/Module/Install/Win32.pm - C:/Perl/site/lib/Module/Install/Win32.pm"
 package Module::Install::Win32;
 use Module::Install::Base; @ISA = qw(Module::Install::Base);
 
